# pkgui

./: .gitignore  CMakeLists.txt  CryptoNoteWallet.cmake  PennyKoinWallet.cmake  README.md  changelist.txt  changes.txt  copyright  license.txt  pennykoin.aps  pennykoin.rc
src/: AliasProvider.cpp  CurrencyAdapter.cpp  CurrencyAdapter.h  LoggerAdapter.cpp  NodeAdapter.cpp  QTpenny.desktop  Settings.cpp  WalletAdapter.cpp  WalletAdapter.h  cryptonotewallet.aps  cryptonotewallet.rc  main.cpp  pennykoinwallet.desktop  resources.qrc  update.cpp  update.h
src/gui/: DepositsFrame.cpp  DepositsFrame.h  MainWindow.cpp  MainWindow.h  NewAddressDialog.h  OverviewFrame.cpp  OverviewFrame.h  ReceiveFrame.cpp  ReceiveFrame.h  SendFrame.cpp  SendFrame.h  SendMessageFrame.cpp  SendMessageFrame.h  TransactionDetailsDialog.cpp  TransactionsFrame.cpp  TransactionsListModel.cpp  TransactionsModel.cpp  TransactionsModel.h
src/gui/ui/: aboutdialog.ui  addressbookdialog.ui  addressbookframe.ui  changepassworddialog.ui  depositdetailsdialog.ui  depositsframe.ui  exitwidget.ui  importkeydialog.ui  importsecretkeys.ui  importseed.ui  importtracking.ui  importviewkey.ui  mainwindow.ui  messageaddressframe.ui  messagedetailsdialog.ui  messagesframe.ui  miningframe.ui  newaddressdialog.ui  newpassworddialog.ui  newpooldialog.ui  nodesettings.ui  overviewframe.ui  passworddialog.ui  receiveframe.ui  sendframe.ui  sendmessageframe.ui  showqrcode.ui  transactionconfirmation.ui  transactiondetailsdialog.ui  transactionframe.ui  transactionsframe.ui  transferframe.ui  welcomeframe.ui
src/images/: cryptonote.icns
